name:                AdventOfCode2015
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/AdventOfCode2015#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AdventOfCode.Day01
                     , AdventOfCode.Day02
                     , AdventOfCode.Day03                     
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
  default-language:    Haskell2010

executable AdventOfCode2015
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , AdventOfCode2015
  default-language:    Haskell2010

test-suite AdventOfCode2015-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , AdventOfCode2015
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stubillwhite/advent-of-code-2015-haskell
